--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
